update logic order